--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ boto3 = "^1.12.30"
 django-storages = "^1.9.1"
 pillow = "^7.0.0"
 supervisor = "^4.1.0"
+requests = "^2.23.0"
 
 [tool.poetry.dev-dependencies]
 
