--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-storages = "^1.9.1"
 pillow = "^7.0.0"
 supervisor = "^4.1.0"
 requests = "^2.23.0"
+notebook = "^6.0.3"
 
 [tool.poetry.dev-dependencies]
 
