--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ selenium = "^3.141.0"
 django-phone-field = "^1.8.0"
 django-phonenumber-field = "^4.0.0"
 phonenumbers = "^8.12.1"
+django-filter = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 
