--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ django-phonenumber-field = "^4.0.0"
 phonenumbers = "^8.12.1"
 django-filter = "^2.2.0"
 django-mysql = "^3.3.0"
+django-filters = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 
