--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ phonenumbers = "^8.12.1"
 django-filter = "^2.2.0"
 django-mysql = "^3.3.0"
 django-filters = "^0.2.1"
+django-multiselectfield = "^0.1.12"
 
 [tool.poetry.dev-dependencies]
 
