--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,9 @@ django-filter==2.2.0 \
     --hash=sha256:558c727bce3ffa89c4a7a0b13bc8976745d63e5fd576b3a9a851650ef11c401b
 django-filters==0.2.1 \
     --hash=sha256:1a9799a41106dc53ed894e952a24e8dee9b4fb37f010f22d178c09c90c61d711
+django-multiselectfield==0.1.12 \
+    --hash=sha256:d0a4c71568fb2332c71478ffac9f8708e01314a35cf923dfd7a191343452f9f9 \
+    --hash=sha256:c270faa7f80588214c55f2d68cbddb2add525c2aa830c216b8a198de914eb470
 django-mysql==3.3.0 \
     --hash=sha256:b984dfe75bedeb01bfcb974fe8400c224a6b55677b98a799f1c96274d96c5a72 \
     --hash=sha256:ceaf6d93396b7f7b3798ac5f9a819dd70d5f0e1112850f2a34c57f062fa19398
